--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppThemeDark.Base">
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
@@ -31,12 +31,10 @@
                 android:resource="@xml/searchable" />
         </activity>
         <activity
-            android:name=".activity.DetailActivity"
-            android:theme="@style/AppTheme" />
+            android:name=".activity.DetailActivity"  />
         <activity
             android:name=".activity.SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:theme="@style/AppTheme"/>
+            android:label="@string/title_activity_settings" />
     </application>
 
 </manifest>
